# CMakeList.txt : CMake project for MazeGenerator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MazeGenerator")

# Add source to this project's executable.
add_executable (MazeGenerator "MazeGenerator.cpp" "MazeGenerator.h")

# TODO: Add tests and install targets if needed.
